# chip_8

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: Chip8.cpp  Chip8.hpp  main.cpp  plaform.cpp  platform.hpp
